test/modules/standard/FileSystem/lydia/remove/nonexistent_file.good
nonexistent_file.chpl:4: error: No such file or directory in remove with path "nonexistent_file.txt"
