test/modules/standard/FileSystem/lydia/remove/nonexistent_file.chpl
use FileSystem;
// This test tries to remove a file that did not exist
var filename = "nonexistent_file.txt";
remove(filename);
